:lipstick: Fixing overlapping sections.

--- a/static/scss/date-invite.scss
+++ b/static/scss/date-invite.scss
@@ -85,7 +85,7 @@
       width: 20vw;
       position: relative;
       left: 27vw;
-      top: 11vw;
+      top: 10vh;
     }
 
   }
