--- a/static/scss/gallery.scss
+++ b/static/scss/gallery.scss
@@ -2,6 +2,8 @@
 
 .photo-gallery {
 
+  margin-top: 10vh;
+
   #image1 {
     background-image: url("../img/1.jpg");
   }
